# VRTemplate

./: .gitmodules  clone_project.py  cmd.py  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/amwatson/vrtemplate/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  OpenXR.cpp  OpenXR.h  VrApp.cpp  VrApp.h
app/src/main/cpp/gl/: Egl.cpp  Egl.h  Framebuffer.cpp  Framebuffer.h  FramebufferValidation.h
app/src/main/cpp/input/: VrController.cpp  VrController.h
app/src/main/cpp/utils/: Common.h  LogUtils.h  MathUtils.h  MessageQueue.h
app/src/main/java/com/amwatson/vrtemplate/: MainActivity.kt
app/src/main/res/values/: strings.xml
app/src/test/java/com/amwatson/vrtemplate/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
